<resources>
    <string name="app_name">Health-Tracker</string>
    <string name="smash_that_like_button">Exercise your fingers</string>
    <string name="smashify_like">Flex</string>
    <string name="go_to_stopwatch">Stopwatch</string>
    <string name="go_to_fingercises">Fingercises</string>
    <string name="next_image">Next Image</string>
    <string name="notify_me">H2O reminder</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="reps">Reps</string>
    <string name="name_of_exercise">Name of exercise</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
</resources>
