<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="308dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/exerciseField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name_of_exercise"
            android:inputType="text"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/unitField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/reps"
            android:inputType="number"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/descriptionField"
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/description"
            android:inputType="text|textMultiLine|textLongMessage"
            tools:targetApi="o" />

        <Button
            android:id="@+id/submitExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textAllCaps="false" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>